add comments and adaptation info and comments

--- a/index.html
+++ b/index.html
@@ -174,8 +174,253 @@
             <span class="info__main__aside__content_text">Выпускников</span>
           </div>
         </aside>
+        <div class="info__main__block">
+          <div class="info__main__block__day-open-door">
+            <div class="info__main__block__day-open-door_date">
+              <span class="info__main__block__day-open-door_date_num">25</span>
+              <span class="info__main__block__day-open-door_date_season">ноября</span>
+            </div>
+            <div class="info__main__block__day-open-door_text">
+              <span class="info__main__block__day-open-door_text_title">День открытых дверей </span>
+              <p class="info__main__block__day-open-door_text_p">Приглашаем всех желающих на бесплатную экскурсию 
+                в мир востребованных профессий и полезных навыков</p>
+            </div>
+            <div class="info__main__block__day-open-door_button">
+              <button class="info__main__block__day-open-door_button_btn btn " >Записаться <i class="icon-arrow-right"></i></button>
+            </div>
+            
+          </div>
+          <div class="info__main__block__program">
+            <img src="setting/img/monitor.png" alt="monitor">
+            <span class="info__main__block__program_title">Программы обучения</span>
+            <p class="info__main__block__program_p">В списке наших курсов вы сможете найти профессию и занятие по душе, изучить новое и получить практические знания, которые помогут получить работу мечты.</p>
+            <button class="info__main__block__program_btn btn">Подробнее <i class="icon-arrow-right"></i></button>
+          </div>
+          <div class="info__main__block__news">
+            <img src="setting/img/newspaper.png" alt="paper">
+            <span class="info__main__block__news_title">Новости Академии</span>
+          </div>
+          <div class="info__main__block__world-it">
+            <img src="setting/img/diagram.png" alt="diagram">
+            <span class="info__main__block__world-it_title">Мир IT</span>
+          </div> 
+          <div class="info__main__block__test">
+            <img src="setting/img/figure-pick.png" style="max-width:97.34px; max-height: 97.23px;"  alt="figures">
+            <div class="info__main__block__test_title">
+              <span class="info__main__block__test_title_h1">Попробуй!</span>
+              <p class="info__main__block__test_title_p">Пройдите тест и узнайте свои способности 
+                в сфере информационных технологий</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="conteiner comments">
+        <div class="comments__title">
+          <span class="comments__title_h1">
+            Отзывы наших студентов
+          </span>
+        </div>
+        <div class="comments__block">
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person1.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person  ">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person2.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person3.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person4.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person4.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person5.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person2.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person1.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person  ">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person2.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person3.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person4.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person4.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person5.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque est bibendum urna facilisis varius. In hac habitasse platea dictumst. In ut dui sodales.</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+          <div class="comments__block__person height">
+            <div class="comments__block__person_name">
+              <img src="setting/img/person2.png" alt="person"  style="min-width:40px; object-fit:contain; ">
+              <div class="comments__block__person_name__title">
+                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
+                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
+              </div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
+            <span class="comments__block__person_name_star"><i class="icon-Star">
+            </i>
+            4,87 / 5
+            </span>
+          </div>
+        </div>
       </div>
     </div>
+    
   </body>
 
 
