--- a/index.html
+++ b/index.html
@@ -319,20 +319,6 @@
             4,87 / 5
             </span>
           </div>
-          <div class="comments__block__person height">
-            <div class="comments__block__person_name">
-              <img src="setting/img/person1.png" alt="person"  style="min-width:40px; object-fit:contain; ">
-              <div class="comments__block__person_name__title">
-                <span class="comments__block__person_name__title_h1">Имя Фамилия</span>
-                <span class="comments__block__person_name__title_p">Студент курса «WEB-разработчик»</span>
-              </div>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut feugiat nisl at augue dapibus, id tristique lorem placerat. Curabitur pellentesque</p>
-            <span class="comments__block__person_name_star"><i class="icon-Star">
-            </i>
-            4,87 / 5
-            </span>
-          </div>
           <div class="comments__block__person  ">
             <div class="comments__block__person_name">
               <img src="setting/img/person2.png" alt="person"  style="min-width:40px; object-fit:contain; ">
@@ -419,8 +405,9 @@
           </div>
         </div>
       </div>
+      <div class="conteiner"></div>
     </div>
-    
+
   </body>
 
 
