Project-exam_end

--- a/index.html
+++ b/index.html
@@ -424,30 +424,100 @@
             </div>
           </div>
         </div>
-        <!-- <div class="footer__reg">
+        <div class="footer__reg">
           <div class="footer__sova">
-            <img src="setting/img/sova_footer.png" alt="sova" class="footer__sova__img">
+            <img src="setting/img/SovaRemake.png" alt="sova" class="footer__sova__img" style="max-width:100%; " >
             <div class="footer__sova__text">
               <span class="footer__sova__title">Помочь с выбором?</span>
               <span class="footer__sova__p">Оставьте заявку и наши специалисты свяжутся с вами, ответят на все вопросы 
                 и подберут подходящий вариант обучения.</span>
+              </div>
+          </div>
+            <form class="footer__form">
+              <div class="footer__input">
+                <input class="footer__input_name" type="text" placeholder="Ваше имя">
+                <input class="footer__input_tel" type="tel" placeholder="Ваш телефон">
+                <input class="footer__input_email" type="email" placeholder="Ваш e-mail">
+              </div>
+              <section class="footer__form__section">
+                <span class="footer__form__agreed">Нажимая на кнопку, я соглашаюсь на обработку персональных данных и с правилами пользования Платформой</span>
+                  <button class="footer__form__btn">Отправить</button>
+              </section>
+            </form>
+        </div>
+        <div class="footer__links">
+          <div class="footer__navbar">
+            <a  href="#top"><img src="setting/img/logowhite.png" alt="logo"></a>
+            <div class="footer__navbar__links">
+              <a class="footer__num" href="tel:88009503398">8 800 950-33-98</a>
+              <a class="footer__adress" href="#top">г. Москва, ул. Ленина, д. 50</a>
+              <a class="footer__mail" href="#top">info@hodfutureacademy.ru</a>
+            </div>
+            <div class="footer__navbar__icons">
+              <a href="#"><i class="icon-vk"></i></a>
+              <a href="#"><i class="icon-inst"></i></a>
+              <a href="#"><i class="icon-facebook"></i></a>
+              <a href="#"><i class="icon-youtube"></i></a>
+              <a href="#"><i class="icon-telegram"></i></a>
+            </div>
+            <span class="copyright">© ХОД, Future Academy</span>
+          </div>
+          <div class="footer__nav">
+            <div class="footer__nav__child">
+              <span class="footer__nav__title">Детям</span>
+              <a href="#" class="footer__link">Робототехника</a>
+              <a href="#" class="footer__link">Создание игр</a>
+              <a href="#" class="footer__link">Программирование</a>
+              <a href="#" class="footer__link">Мультимедиа</a>
+              <a href="#" class="footer__link">Soft skills</a>
+              <a href="#" class="footer__link">Шахматы</a>
+              <a href="#" class="footer__link">Блогинг</a>
+              <a href="#" class="footer__link">Создание игр</a>
+              <a href="#" class="footer__link">Программирование</a>
+              <a href="#" class="footer__link">Мультимедиа</a>
+              <a href="#" class="footer__link">Soft skills</a>
+            </div>
+            <div class="footer__nav__child max_width">
+              <span class="footer__nav__title">Подросткам</span>
+              <a href="#" class="footer__link">Web-разработка</a>
+              <a href="#" class="footer__link">Прикладное программирование</a>
+              <a href="#" class="footer__link">Графическое моделирование</a>
+              <a href="#" class="footer__link">Game Development</a>
+              <a href="#" class="footer__link">Soft skills</a>
+              <a href="#" class="footer__link">Разработчик мобильных приложений</a>
+              <a href="#" class="footer__link">Блогинг</a>
+              <a href="#" class="footer__link">Создание игр</a>
+              <a href="#" class="footer__link">Программирование</a>
+              <a href="#" class="footer__link">Мультимедиа</a>
+              <a href="#" class="footer__link">Soft skills</a>
+            </div>
+            <div class="footer__nav__child ">
+              <span class="footer__nav__title">Взрослым</span>
+              <a href="#" class="footer__link">Разработчик игр на Unity</a>
+              <a href="#" class="footer__link">Разработка ПО</a>
+              <a href="#" class="footer__link">Графический Дизайн</a>
+              <a href="#" class="footer__link">Тестировщик ПО</a>
+              <a href="#" class="footer__link">Интернет Маркетинг</a>
+              <a href="#" class="footer__link">Java-разработчик</a>
+              <a href="#" class="footer__link">Python–разработчик</a>
+              <a href="#" class="footer__link">IOS-разработчик</a>
+              <a href="#" class="footer__link">Программирование</a>
+            </div>
+            <div class="footer__nav__child">
+              <span class="footer__nav__title">Информация</span>
+              <a href="#" class="footer__link">Об академии</a>
+              <a href="#" class="footer__link">Мероприятия</a>
+              <a href="#" class="footer__link">Новости</a>
+              <a href="#" class="footer__link">База знаний</a>
+              <a href="#" class="footer__link">Карьера</a>
+              <a href="#" class="footer__link">Контакты</a>
             </div>
           </div>
-        </div> -->
-        <div class="footer__links">
-          <div class="footer__nav">
-
-          </div>
-          
         </div>
       </footer>
     </div>
-
+    <!-- ! -->
+    <script src="setting/js/main.js">
+    </script>
   </body>
-
-
-  <script src="setting/js/main.js">
-
-  </script>
-  <!-- ! -->
 </html>
